[package]
name = "Blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.7.0"
rand = "0.8.4"
sha2 = "0.10.8"

secp256k1 = "0.28.0"
uuid = { version = "1.6.1", features = ["v4"] }
hex = "0.4.2"
